# arc-bevy-jam

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: release.yaml
src/: gui.rs  main.rs  map.rs  player.rs  tool.rs  world.rs  xorshift.rs
src/gui/: gamehud.rs  mainmenu.rs
src/hexa/: mod.rs  orient.rs  storage.rs
src/tool/: debug.rs  dev.rs  xorshift.rs
src/world/: bg.rs  grid.rs  mode.rs  player.rs
src/world/grid/: data.rs  math.rs  orient.rs  storage.rs  utilities.rs
src/world/mode/: base.rs  event.rs  explore.rs
src/world/player/: recources.rs  resources.rs
wasm/: index.html
