[package]
name = "arc-demo"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy-inspector-egui = { version = "0.12" }
byteorder = "1.4"
sha2 = "0.10"
